<resources>
    <string name="pos_name_sample">АКБ Baseus Qpow 20000mAh 15W</string>
    <string name="app_name">Addition App</string>
    <string name="pos_name2">Найменування:</string>
    <string name="pos_code_sample">948139</string>
    <string name="pos_code2">Код товару:</string>
    <string name="orig_count">Доступна</string>
    <string name="orig_count2">Наявна</string>
    <string name="count_fact">Замовлена</string>
    <string name="count_sample2">150</string>
    <string name="empty_count">--</string>
    <string name="ttl_check2">Перелік товарів</string>
    <string name="ttl_photo">Фото</string>
    <string name="performer">Компанія вик-вець:</string>
    <string name="ttl_info">Опис</string>
    <string name="ttl_count">Кількість</string>
    <string name="enter_count">Замовлено одиниць:</string>
    <string name="count_ent_sample">-- / --</string>
    <string name="title">Розміщення замовлення</string>
    <string name="addorder">Розмістити</string>
    <string name="password">Пароль</string>
    <string name="login">Логін</string>
    <string name="email">Email</string>
    <string name="employee">Співробітник</string>
    <string name="OR">або</string>
    <string name="phonenumber">Номер телефону</string>
    <string name="pib">ПІБ</string>
    <string name="client">Клієнт</string>
    <string name="non_current_password">Неправильний пароль</string>
    <string name="non_reg_email">Email не зареестровано в системі</string>
    <string name="non_current_login">Неправильний логін співробітника</string>
    <string name="non_format_login">Login не відповідає формату Email</string>
    <string name="non_format_email">Email не відповідає формату</string>
    <string name="add_order_as">Розмістити замовлення як</string>
    <string name="database_error">Помилка взаємодії з базою даних.\nСпробуйте повторити останню дію</string>
    <string name="inc_phone">Некоректний номер телефону</string>
    <string name="inc_pib">Поле містить неприпустимі символи</string>
    <string name="checking_list_empty">Список товарів компанії порожній</string>
    <string name="orderCreate">Замовлення успішно створено</string>
</resources>