<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_white">

    <TextView
        android:id="@+id/title_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/fonts_color_blc"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/headerline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/headerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/contenthead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headerline">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/enter_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.38" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/select_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.89" />

        <TextView
            android:id="@+id/title_performer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/performer"
            android:textAlignment="textStart"
            android:textColor="@color/fonts_color_blc"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_performer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:background="@drawable/inpt_workenter1"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="40dp"
            android:textAlignment="viewStart"
            android:textColor="@color/fonts_color_blc"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/enter_border"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <Spinner
            android:id="@+id/select_performer"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:background="@drawable/strilka_spinner"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/title_performer"
            app:layout_constraintEnd_toEndOf="@+id/enter_performer"
            app:layout_constraintStart_toStartOf="@+id/select_border"
            app:layout_constraintTop_toTopOf="@+id/title_performer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contenthead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/ttl_check2"
        android:textAlignment="center"
        android:textColor="@color/fonts_color_blc"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barcode_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contenthead" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/barcode_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/HeaderTable"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="7dp"

        android:layout_marginTop="3dp"
        android:layout_marginEnd="7dp"
        android:overScrollMode="always"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barcode_border">

        <ImageView
            android:id="@+id/top_header_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/line_tablehline" />

        <TextView
            android:id="@+id/photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/ttl_photo"
            android:textColor="@color/fonts_color_blc"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/left_header_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_header_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1705" />

        <ImageView
            android:id="@+id/left_header_border_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/left_header_border"
            app:layout_constraintStart_toStartOf="@+id/left_header_border"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/line_short" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/ttl_info"
            android:textAlignment="center"
            android:textColor="@color/fonts_color_blc"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right_header_border"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="@+id/left_header_border"
            app:layout_constraintTop_toBottomOf="@+id/top_header_border" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_header_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8316583" />

        <ImageView
            android:id="@+id/right_header_border_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right_header_border"
            app:layout_constraintStart_toStartOf="@+id/right_header_border"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/line_short" />

        <TextView
            android:id="@+id/count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/ttl_count"
            android:textColor="@color/fonts_color_blc"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/right_header_border_img"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bottom_header_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/line_tablehline" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/ScrollableTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footerline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderTable">

        <LinearLayout
            android:id="@+id/TableView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/infostate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:textAlignment="center"
        android:textColor="@color/grey2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ScrollableTable"
        app:layout_constraintEnd_toEndOf="@+id/ScrollableTable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderTable" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/footerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstFooter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScrollableTable">

        <ImageView
            android:id="@+id/border_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/line_yellow" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/footer_centr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageButton
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#00FFFFFF"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:scaleType="fitCenter"
            android:stateListAnimator="@animator/def_animator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/left_btn_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/border_top"
            app:srcCompat="@drawable/sel_minus" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_btn_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.18" />

        <TextView
            android:id="@+id/text_footertitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/enter_count"
            android:textColor="@color/fonts_color_blc"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/footer_centr"
            app:layout_constraintEnd_toStartOf="@+id/right_btn_border1"
            app:layout_constraintStart_toStartOf="@+id/left_btn_border" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/count_ent_sample"
            android:textColor="@color/fonts_color_blc"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/right_btn_border1"
            app:layout_constraintStart_toStartOf="@+id/left_btn_border"
            app:layout_constraintTop_toTopOf="@+id/footer_centr" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_btn_border1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.64" />

        <ImageButton
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#00FFFFFF"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:scaleType="fitCenter"
            android:stateListAnimator="@animator/def_animator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right_btn_border2"
            app:layout_constraintStart_toStartOf="@+id/right_btn_border1"
            app:layout_constraintTop_toBottomOf="@+id/border_top"
            app:srcCompat="@drawable/sel_plus" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_btn_border2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.82" />

        <ImageButton
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#00FFFFFF"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:scaleType="fitCenter"
            android:stateListAnimator="@animator/def_animator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/right_btn_border2"
            app:layout_constraintTop_toBottomOf="@+id/border_top"
            app:srcCompat="@drawable/variabled_confirm_state" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>